feat(profile): manage profile and cover images through Cloudinary
